# CbinCSV

./: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cfgbin.rs  commands.rs  csv_handler.rs  format_handler.rs  lib.rs  main.rs  mcp_server.rs  rdbn.rs
src/components/: CsvTable.vue  ExportPanel.vue  ImportOverlay.vue  McpPanel.vue  ProgressBar.vue  SearchReplace.vue  SettingsModal.vue  Sidebar.vue  SplashScreen.vue  StatusBar.vue  TitleBar.vue  Toolbar.vue
src/composables/: useSound.ts
src/i18n/: index.ts
src/lang/: de.json  en.json  es.json  fr.json  it.json  ja.json
src/stores/: session.ts  settings.ts
