[package]
name = "cbincsv"
version = "1.0.0"
edition = "2021"

[lib]
name = "cbincsv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
encoding_rs = "0.8"
csv = "1"
sys-locale = "0.3"
serde_yaml = "0.9"
toml = "0.8"
quick-xml = "0.36"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
